# cv-analyzer

./: .gitignore  auth.py  create_job.py  database.py  download-cv.py  pyproject.toml
