[project]
name = "cv-analyzer-venv"
version = "0.1.0"
description = "Analisador de Curriculos"
authors = [
    {name = "maikelreis",email = "maikel_reis@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
