[tool.poetry]
name = "cv-analyzer"
version = "0.1.0"
description = "Analisador de Curriculos"
authors = ["maikelreis <maikel_reis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
google-api-python-client = "^2.171.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
tinydb = "^4.8.2"
pydent = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
